#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2012-09-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999915 released.

        * Repaired some Makefile.PL issues.


2012-08-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999914 released.

        * Connection handle to mozrepl now has repl method.


2012-08-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999913 released.

        * Fixed telnet functionality to work with mozrepl.


2012-08-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999912 released.

        * Fixed for passwords with parentesis.


2012-05-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999911 released.

        * Changed Oracle url for berkeleydb download.


2012-04-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999910 released.

        * Updated Error message to include command.

        * Updated Term::Menus dependency to 2.15.


2012-04-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999909 released.

        * Completed fixes for mirror() to work with remote Base
          RedHat Linux and local Dest Cygwin.


2012-04-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999908 released.

        * More fixes mirror() to work with remote Base Redhat
          Linux and local Dest Cygwin.


2012-04-26  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.999907 released.

        * Fixed mirror() to work with remote Base Redhat Linux
          and local Dest Cygwin.

