@@ -15,7 +15,7 @@ provides:
     file: lib/Net/FullAuto/FA_Core.pm
   Net::FullAuto:
     file: lib/Net/FullAuto.pm
-    version: 0.999914
+    version: 0.999916
   Net::FullAuto::FA_Core:
     file: lib/Net/FullAuto/FA_Core.pm
   Net::FullAuto::FA_DB:
@@ -42,7 +42,7 @@ requires:
   Module::Build: .3601
   Module::Load::Conditional: 0
   Data::Dump::Streamer: 0
-  Term::Menus: 2.16
+#  Term::Menus: 2.16
   Tie::Cache: 0
   Sort::Versions: 0
   Crypt::CBC: 0
@@ -65,7 +65,7 @@ requires:
   String::Random: 0
   Data::Password::Check: 0
   BerkeleyDB: 0
-  YAML: 0
+#  YAML: 0
 resources:
   license: http://opensource.org/licenses/gpl-3.0.html
-version: 0.999914
+version: 0.999916
