@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.999915';
+our $VERSION='0.999916';
 
 
 use 5.005;
